Bug 316307 - it's just crash on data opening
Summary: it's just crash on data opening
Status: RESOLVED FIXED
Alias: None
Product: massif-visualizer
Classification: Frameworks and Libraries
Component: massif-parser (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR crash
Target Milestone: 0.2
Assignee: Massif Visualizer developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 13:32 UTC by Ivan
Modified: 2013-03-18 05:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crashing data sampla (371.43 KB, application/octet-stream)
2013-03-07 13:33 UTC, Ivan
Details
valgrind thread check (47.90 KB, text/x-log)
2013-03-08 08:15 UTC, Ivan
Details
valgrind memcheck (396.54 KB, text/x-log)
2013-03-08 08:16 UTC, Ivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2013-03-07 13:32:59 UTC
sampla data attached

Reproducible: Always

Steps to Reproduce:
open attached data
Actual Results:  
program crash

Expected Results:  
show graph

start from console

massif-visualizer(7866)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/kgraphviewerpart.so" does not offer a qt_plugin_instance function.
massif-visualizer(7866)/kdeui (KAction) KSelectAction::setCurrentAction: Action does not have the correct properties to be current: "Dot" 
massif-visualizer(7866)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
massif-visualizer(7866)/kdeui (kdelibs): Attempt to use QAction "toggleDataTree" with KXMLGUIFactory! 
massif-visualizer(7866)/kdeui (kdelibs): Attempt to use QAction "toggleAllocators" with KXMLGUIFactory!
Comment 1 Ivan 2013-03-07 13:33:28 UTC
Created attachment 77832 [details]
crashing data sampla
Comment 2 Ivan 2013-03-07 13:34:51 UTC
builded from git on kde 4.10.1 by
https://aur.archlinux.org/packages/massif-visualizer-git/
PKGBUILD
Comment 3 Christoph Feck 2013-03-07 13:42:59 UTC
Could you add a backtrace? I just opened the file in massif-visualizer, and it displayed correctly.

For more information, see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
Comment 4 Ivan 2013-03-07 13:48:04 UTC
Program received signal SIGSEGV, Segmentation fault.
0x00007ffff58fa12b in QUrl::QUrl(QUrl const&) () from /usr/lib/libQtCore.so.4
(gdb) bt
#0  0x00007ffff58fa12b in QUrl::QUrl(QUrl const&) () from /usr/lib/libQtCore.so.4
#1  0x00007ffff6a6d749 in KUrl::KUrl(KUrl const&) () from /usr/lib/libkdecore.so.5
#2  0x00000000004fd88d in Massif::ParseThread::file (this=<optimized out>)
    at /tmp/yaourt-tmp-dront/aur-massif-visualizer-git/src/massif-visualizer-build/massifdata/parsethread.cpp:105
#3  0x000000000045856e in Massif::MainWindow::parserFinished (this=0x978d50, thread=0xe4dc30, data=<optimized out>)
    at /tmp/yaourt-tmp-dront/aur-massif-visualizer-git/src/massif-visualizer-build/app/mainwindow.cpp:477
#4  0x00007ffff595c06e in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#5  0x00007ffff5ebf18a in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#6  0x00007ffff628425b in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#7  0x00007ffff7aa7b78 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#8  0x00007ffff5e7018c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#9  0x00007ffff5e7460a in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#10 0x00007ffff79b58c6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#11 0x00007ffff59476ae in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#12 0x00007ffff594b011 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#13 0x00007ffff5f1131c in ?? () from /usr/lib/libQtGui.so.4
#14 0x00007ffff59463ff in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#15 0x00007ffff5946688 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#16 0x00007ffff594b328 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#17 0x0000000000454f8f in main (argc=1, argv=0x7fffffffd528) at /tmp/yaourt-tmp-dront/aur-massif-visualizer-git/src/massif-visualizer-build/app/main.cpp:60
Comment 5 Ivan 2013-03-07 13:49:27 UTC
may be this can help too. it's printed before the bcktrace

[New Thread 0x7fffe41c7700 (LWP 10557)]
"/org/freedesktop/UDisks2/drives/TOSHIBA_MK5065GSX_30U2B2CUB" : property "Drive" does not exist 
"/org/freedesktop/UDisks2/drives/HL_DT_STDVDRAM_GT30N_M5NA3PL4101" : property "Drive" does not exist 
"/org/freedesktop/UDisks2/drives/TOSHIBA_MK5065GSX_30U2B2CUB" : property "DeviceNumber" does not exist 
"/org/freedesktop/UDisks2/drives/TOSHIBA_MK5065GSX_30U2B2CUB" : property "Device" does not exist 
[New Thread 0x7fffe37fc700 (LWP 10561)]
[New Thread 0x7fffe2ffb700 (LWP 10564)]
[Thread 0x7fffe2ffb700 (LWP 10564) exited]
Comment 6 Ivan 2013-03-07 14:09:21 UTC
here is also to prints when run debug verion in console

massif-visualizer ./massif.out.7296 
massif-visualizer(10908)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/kgraphviewerpart.so" does not offer a qt_plugin_instance function.
massif-visualizer(10908)/kdeui (KAction) KSelectAction::setCurrentAction: Action does not have the correct properties to be current: "Dot" 
massif-visualizer(10908)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
massif-visualizer(10908)/kdeui (kdelibs): Attempt to use QAction "toggleDataTree" with KXMLGUIFactory! 
massif-visualizer(10908)/kdeui (kdelibs): Attempt to use QAction "toggleAllocators" with KXMLGUIFactory! 
description: "(none)" 
command: "dist/Release_NoStrip_Linux/GNU_CCACHE-Linux-x86/servicestest" 
time unit: "i" 
snapshots: 91 
peak: snapshot # 90 after "5.17493e+10i" 
peak cost: "15,7 MiB"  heap "39,7 KiB"  heap extra "0 B"  stacks 
*** Error in `massif-visualizer': corrupted double-linked list: 0x00000000028bbd50 ***

with exit

and


massif-visualizer ./massif.out.7296 
massif-visualizer(10930)/kdecore (KLibrary) kde4Factory: The library "/usr/lib/kde4/kgraphviewerpart.so" does not offer a qt_plugin_instance function.
massif-visualizer(10930)/kdeui (KAction) KSelectAction::setCurrentAction: Action does not have the correct properties to be current: "Dot" 
massif-visualizer(10930)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
massif-visualizer(10930)/kdeui (kdelibs): Attempt to use QAction "toggleDataTree" with KXMLGUIFactory! 
massif-visualizer(10930)/kdeui (kdelibs): Attempt to use QAction "toggleAllocators" with KXMLGUIFactory! 
description: "(none)" 
command: "dist/Release_NoStrip_Linux/GNU_CCACHE-Linux-x86/servicestest" 
time unit: "i" 
snapshots: 91 
peak: snapshot # 90 after "5.17493e+10i" 
peak cost: "15,7 MiB"  heap "39,7 KiB"  heap extra "0 B"  stacks 


with freeze
Comment 7 Jekyll Wu 2013-03-07 17:03:09 UTC
I also have no problem in opening that file
Comment 8 Ivan 2013-03-08 08:15:39 UTC
Created attachment 77852 [details]
valgrind thread check
Comment 9 Ivan 2013-03-08 08:16:05 UTC
Created attachment 77853 [details]
valgrind memcheck
Comment 10 Ivan 2013-03-08 08:17:17 UTC
I do not really know why you can't reproduce, but it crash for me on every start with any massif file. Attached valgrind output
Comment 11 Milian Wolff 2013-03-16 16:24:59 UTC
Git commit 5938f3459e2d2e29d99b225008fcb6f8c3ff7998 by Milian Wolff.
Committed on 16/03/2013 at 17:23.
Pushed by mwolff into branch 'master'.

Refactor threaded parsing, use long lived worker pattern.

Not only is the code much cleaner, we also have the added advantage
of not spinning up new threads whenever we parse a new file.

Furthermore the signals have been cleaned up to remove the unsafe
accessal of the old ParseThread once it has finished parsing.

M  +29   -31   app/mainwindow.cpp
M  +4    -3    app/mainwindow.h
M  +1    -1    massifdata/CMakeLists.txt
D  +0    -117  massifdata/parsethread.cpp
A  +100  -0    massifdata/parseworker.cpp     [License: GPL (v2/3)]
R  +15   -21   massifdata/parseworker.h [from: massifdata/parsethread.h - 071% similarity]

http://commits.kde.org/massif-visualizer/5938f3459e2d2e29d99b225008fcb6f8c3ff7998
Comment 12 Ivan 2013-03-17 08:04:52 UTC
works ok for me now
Comment 13 Ivan 2013-03-17 08:14:29 UTC
but crash in detailed snapshot analyze

#0  0x00007fffe575a383 in aaglex () from /usr/lib/libcgraph.so.6
#1  0x00007fffe5755537 in aagparse () from /usr/lib/libcgraph.so.6
#2  0x00007fffe5755c3b in agconcat () from /usr/lib/libcgraph.so.6
#3  0x00007fffe5d9b869 in ?? () from /usr/lib/libkgraphviewer.so.3
#4  0x00007ffff584a87c in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007ffff2f8de0f in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007ffff4f08efd in clone () from /usr/lib/libc.so.6

probably it's a differnt bug
Comment 14 Milian Wolff 2013-03-17 17:30:31 UTC
Yes, different bug - please open a new one but for KGraphViewer. That one now crashes for me as well :-/
Comment 15 Ivan 2013-03-18 05:37:34 UTC
ok. opened bug 316945. thank you for fixed fileparser